<resources>
    <string name="app_name">Ruta de 10</string>

    <!-- API VALUES -->
    <string name="api_common_exception_package_name">mx.krieger.internal.apicommons.exceptions</string>
    <string name="api_mapaton_exception_package_name">mx.krieger.labplc.mapaton.commons.exceptions</string>
    <string name="commons_exception_package_name">mx.krieger.internal.commons.exceptions</string>

    <!-- TITLES -->
    <string name="section_name_home">Ruta de 10</string>
    <string name="section_name_ranking">Ranking</string>
    <string name="section_name_info">Información</string>

    <string name="title_name_trail_detail">Detalle de Recorrido</string>

    <!-- GENERIC -->
    <string name="app_error">Error</string>
    <string name="app_retry">Reintentar</string>
    <string name="send">ENVIAR</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>

    <!-- APP ERRORS -->
    <string name="error_empty_list">El servidor devolvió una lista vacía</string>

    <string name="app_location_unavailable">Fue imposible obtener la ubicación geográfica del dispositivo</string>
    <string name="app_location_suspended">Se suspendió la conexión para obtener la geolocalización</string>
    <string name="app_location_failed">No se pudo conectar al servicio de geolocalización</string>

    <string name="error_connection">Problema de conexión al servidor, comprueba que tu dispositivo está conectado a Internet e intenta de nuevo.</string>
    <string name="error_internal_server">Error interno de servidor.</string>
    <string name="error_generic_asynctask">Error de escritura en memoria o interpretación de datos.</string>
    <string name="error_unknown">Error desconocido. La aplicación entró a un estado inválido.</string>
    <string name="error_code">"Error de conexión al servidor. Se devolvió el siguiente código de error: "</string>

    <!-- NAVDRAWER -->
    <string name="drawer_open">Abrir Menú</string>
    <string name="drawer_close">Cerrar Menú</string>

    <string name="app_nav_item_1">Recorridos</string>
    <string name="app_nav_item_2">Ranking</string>
    <string name="app_nav_item_3">Información</string>
    <string name="frag_home_toggle_text_loading">Cargando recorridos...</string>
    <string name="frag_home_toggle_text_preffix">Recorridos encontrados:</string>
    <string name="frag_home_btn_reload">Buscar en esta zona</string>
    <string name="error_zoom_too_low">El área de búsqueda es demasiado amplia, haz zoom para cargar los recorridos de una zona.</string>
    <string name="error_map_has_not_loaded">Por favor espera a que termine de cargar el mapa e intenta de nuevo</string>
    <string name="error_obtain_trail">Falló la obtención de uno de los recorridos</string>
    <string name="error_obtain_trail_details">No fue posible obtener el recorrido debido al sig. error:\n</string>
    <string name="error_navigation">Error de navegación, la pantalla necesita datos de entrada</string>
    <string name="frag_home_toggle_label_placeholder">Aún no se ha seleccionado un área</string>
    <string name="act_trail_detail_label_rating">Calificación</string>
    <string name="act_trail_detail_label_tariff">Tarifa Máxima</string>
    <string name="act_trail_detail_label_type">Tipo de Transporte</string>
    <string name="act_trail_detail_btn_rate">Evaluar el recorrido</string>
    <string name="act_feedback_label_type">Tipo de transporte</string>
    <string name="act_feedback_label_time">¿En qué horario te subiste?</string>
    <string name="act_feedback_label_fullness">Aglomeración</string>
    <string name="act_feedback_label_security">Seguridad</string>
    <string name="act_feedback_label_vehicle">Estado del vehículo</string>
    <string name="act_feedback_label_rules">Faltas al reglamento de tránsito</string>
    <string name="act_feedback_label_rating">Calificación del recorrido</string>
    <string name="act_feedback_et_hint_comments">Comentarios sobre el recorrido</string>
    <string name="act_trail_detail_not_yet_rated">Este recorrido no ha sido calificado aún.</string>
    <string name="act_feedback_rbtn_microbus">Microbús</string>
    <string name="act_feedback_rbtn_van">Vagoneta</string>
    <string name="act_feedback_rbtn_bus">Autobús</string>
    <string name="act_feedback_et_hint_time">Horario</string>
    <string name="act_feedback_rbtn_fullness_0">Había espacio para sentarse</string>
    <string name="act_feedback_rbtn_fullness_1">Había espacio de pie</string>
    <string name="act_feedback_rbtn_fullness_2">Estaba lleno</string>
    <string name="act_feedback_rbtn_fullness_3">Estaba saturado</string>
    <string name="title_name_feedback">Evaluar recorrido</string>
    <string name="act_feedback_cb_security_0">Acoso Sexual</string>
    <string name="act_feedback_cb_security_1">Robo con violencia</string>
    <string name="act_feedback_cb_security_2">Robo sin violencia</string>
    <string name="act_feedback_cb_security_3">Amenazas</string>
    <string name="act_feedback_cb_vehicle_0">El vehiculo tenía choques</string>
    <string name="act_feedback_cb_vehicle_1">El vehículo tenía cromática no oficial</string>
    <string name="act_feedback_cb_vehicle_2">Mal estado de los asientos</string>
    <string name="act_feedback_cb_vehicle_3">Iluminación nocturna insuficiente</string>
    <string name="act_feedback_cb_vehicle_4">Volumen alto de la música</string>
    <string name="act_feedback_cb_rules_0">Exceso de velocidad</string>
    <string name="act_feedback_cb_rules_1">No respetó la señalética</string>
    <string name="act_feedback_cb_rules_2">No respetar la cebra peatonal</string>
    <string name="act_feedback_cb_rules_3">El chofer estaba hablando por teléfono</string>
    <string name="act_feedback_cb_rules_4">Consumo de estupefacientes</string>
    <string name="act_feedback_cb_rules_5">El chofer estaba texteando</string>
    <string name="act_feedback_cb_rules_6">Bloquear la vía pública</string>
    <string name="act_feedback_cb_rules_7">Conducir con la puerta abierta</string>
    <string name="act_feedback_error_select_type">Debes elegir un tipo de transporte</string>
    <string name="act_feedback_error_select_time">Debes seleccionar el horario</string>
    <string name="act_feedback_error_select_fullness">Debes elegir un nivel de aglomeración</string>
    <string name="act_feedback_error_select_rating">Debes calificar el recorrido</string>
    <string name="act_feedback_success">Evaluación enviada con éxito</string>
    <string name="app_error_preffix">No fue posible completar el proceso debido al siguiente error:\n</string>

</resources>
