<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/act_feedback_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:id="@+id/act_feedback_slave_focus"
                android:focusableInTouchMode="true" />

            <TextView
                android:text="@string/act_feedback_label_type"
                style="@style/Text_Label" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/act_feedback_rgroup_type">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_microbus"
                    android:layout_marginBottom="@dimen/app_keyline_text_small"
                    android:text="@string/act_feedback_rbtn_microbus"
                    style="@style/RadioButton" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_van"
                    android:layout_marginBottom="@dimen/app_keyline_text_small"
                    android:text="@string/act_feedback_rbtn_van"
                    style="@style/RadioButton" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_bus"
                    android:text="@string/act_feedback_rbtn_bus"
                    style="@style/RadioButton" />
            </RadioGroup>

            <TextView
                android:text="@string/act_feedback_label_time"
                style="@style/Text_Label" />
            <EditText
                style="@style/EditText.Simple"
                android:hint="@string/act_feedback_et_hint_time"
                android:layout_marginLeft="@dimen/app_keyline_text_small"
                android:layout_marginRight="@dimen/app_keyline_text_small"
                android:id="@+id/act_feedback_et_time"/>

            <TextView
                android:text="@string/act_feedback_label_fullness"
                style="@style/Text_Label" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/act_feedback_rgroup_fullness">
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_fullness_0"
                    android:layout_marginBottom="@dimen/app_keyline_text_small"
                    android:text="@string/act_feedback_rbtn_fullness_0"
                    style="@style/RadioButton" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_fullness_1"
                    android:layout_marginBottom="@dimen/app_keyline_text_small"
                    android:text="@string/act_feedback_rbtn_fullness_1"
                    style="@style/RadioButton" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_fullness_2"
                    android:layout_marginBottom="@dimen/app_keyline_text_small"
                    android:text="@string/act_feedback_rbtn_fullness_2"
                    style="@style/RadioButton" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/act_feedback_rbtn_fullness_3"
                    android:text="@string/act_feedback_rbtn_fullness_3"
                    style="@style/RadioButton" />
            </RadioGroup>


            <TextView
                android:text="@string/act_feedback_label_security"
                style="@style/Text_Label" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_security_0"
                android:text="@string/act_feedback_cb_security_0"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_security_1"
                android:text="@string/act_feedback_cb_security_1"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_security_2"
                android:text="@string/act_feedback_cb_security_2"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_security_3"
                android:text="@string/act_feedback_cb_security_3"
                style="@style/Checkbox" />

            <TextView
                android:text="@string/act_feedback_label_vehicle"
                style="@style/Text_Label" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_vehicle_0"
                android:text="@string/act_feedback_cb_vehicle_0"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_vehicle_1"
                android:text="@string/act_feedback_cb_vehicle_1"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_vehicle_2"
                android:text="@string/act_feedback_cb_vehicle_2"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_vehicle_3"
                android:text="@string/act_feedback_cb_vehicle_3"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_vehicle_4"
                android:text="@string/act_feedback_cb_vehicle_4"
                style="@style/Checkbox" />

            <TextView
                android:text="@string/act_feedback_label_rules"
                style="@style/Text_Label" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_0"
                android:text="@string/act_feedback_cb_rules_0"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_1"
                android:text="@string/act_feedback_cb_rules_1"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_2"
                android:text="@string/act_feedback_cb_rules_2"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_3"
                android:text="@string/act_feedback_cb_rules_3"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_4"
                android:text="@string/act_feedback_cb_rules_4"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_5"
                android:text="@string/act_feedback_cb_rules_5"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_6"
                android:text="@string/act_feedback_cb_rules_6"
                style="@style/Checkbox.WithBottomMargin" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/act_feedback_cb_rules_7"
                android:text="@string/act_feedback_cb_rules_7"
                style="@style/Checkbox" />

            <TextView
                android:text="@string/act_feedback_label_rating"
                style="@style/Text_Label" />
            <android.support.v7.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/act_feedback_rb"
                android:layout_marginLeft="@dimen/app_keyline_text_small"
                android:layout_marginRight="@dimen/app_keyline_text_small"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/app_vertical_padding_text_small">
                <EditText
                    style="@style/EditText"
                    android:textColorHint="@color/app_txt_hint_light"
                    android:inputType="textCapSentences|textMultiLine"
                    android:gravity="left|top"
                    android:id="@+id/act_feedback_et_comments"
                    android:imeOptions="actionDone"
                    android:hint="@string/act_feedback_et_hint_comments" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/act_feedback_btn_send"
                android:layout_marginBottom="@dimen/app_vertical_padding_text_small"
                android:text="@string/send"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>